[package]
authors = ["Andrei Sousa <sousandrei@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Simple driver for ST iis2mdc sensor"
documentation = "https://docs.rs/iis2mdc"
edition = "2018"
include = ["src/", "LICENSE-*", "README.md", "CHANGELOG.md", "COPYRIGHT"]
keywords = ["i2c", "embedded-hal-driver", "iis2mdc", "magnetometer"]
license = "MIT"
name = "iis2mdc"
readme = "README.md"
repository = "https://github.com/sousandrei/iis2mdc"
version = "0.1.2"


[dependencies]
embedded-hal = "0.2.7"

[dev-dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
embedded-hal = "0.2.7"
panic-semihosting = "0.6.0"
stm32l4xx-hal = { version = "0.7.1", features = ["rt", "stm32l433"] }
