[package]
authors = ["Andrei Sousa <sousandrei@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Simple driver for ST iis2mdc sensor"
documentation = "https://docs.rs/iis2mdc"
edition = "2018"
include = ["src/", "LICENSE-*", "README.md", "CHANGELOG.md", "COPYRIGHT"]
keywords = ["i2c", "embedded-hal-driver", "iis2mdc", "magnetometer"]
license = "MIT"
name = "iis2mdc"
readme = "README.md"
repository = "https://github.com/sousandrei/iis2mdc"
version = "0.2.0"


[dependencies]
embedded-hal = "1.0.0"

[dev-dependencies]
approx = "0.5.1"
embedded-hal-mock = "0.11"
